# Bazinga-Compiler

./: .gitignore  CMakeLists.txt  README.md
config/: 1.bzg  2.bzg  SDD.cfg  action_table.txt  grammars.cfg  regular_defination.rd
grammars/: SDD.cfg  grammars.cfg
images/: architecture  architecture_graph.py
include/inter/: Instr.h  Manager.h
include/lexer/: Ast.h  Automata.h  Lexer.h  Node.h
include/parser/: Action.h  Graph.h  ItemSet.h  Parser.h  Product.h  Stack.h  State.h
include/symbols/: Env.h  Id.h  KeyWords.h  Types.h  UnitSet.h
include/symbols/units/: Nonterminals.h  Tag.h  Terminals.h  Unit.h
include/symbols/units/nonterminals/: Arith.h  Bool.h  Equal.h  Expr.h  Factor.h  Ineq.h  Join.h  Nonterminal.h  Stmt.h  Stmts.h  Term.h  Unary.h
include/symbols/units/terminals/: Integer.h  Real.h  Terminal.h  Type.h  Word.h
lexer/: Ast.h  Automata.h  Container.h  Float.h  Info.h  Integer.h  Lexer.h  Node.h  Terminal.h  Token.h  Type.h  Word.h  regular_defination.rd  regular_definition.rd
message/: Message.h
parser/: Action.h  Element.h  Expr.h  Factor.h  Items.h  Itemset.h  Nonterminal.h  Parser.h  Product.h  State.h  Stmt.h  Stmts.h  Term.h  Unary.h  Units.h
parser/grammars/: SDD.cfg  grammars.cfg  test.cfg
regular_definations/: regular_defination.rd
src/: Check.cpp  Run.cpp
src/inter/: Instr.cpp  Manager.cpp
src/lexer/: Ast.cpp  Automata.cpp  Lexer.cpp  Node.cpp
src/parser/: Action.cpp  Graph.cpp  ItemSet.cpp  Parser.cpp  Product.cpp  Reduces.cpp  Stack.cpp  State.cpp
src/symbols/: Env.cpp  Id.cpp  UnitSet.cpp
src/symbols/units/: Unit.cpp
src/symbols/units/nonterminals/: Arith.cpp  Bool.cpp  Equal.cpp  (+9 more)
symbol/: Env.h  Float.h  HeadFiles.h  Id.h  Integer.h  KeyWords.h  Tag.h  Token.h  Type.h  Unit.h  Unitset.h  Word.h
symbol/nonterminals/: Expr.h  Factor.h  Nonterminal.h  Nonterminals.h  Stmt.h  Stmts.h  Term.h  Unary.h
symbol/terminals/: Integer.h  Real.h  Terminal.h  Terminals.h  Type.h
tests/: check_Action_h.cpp  check_Ast_h.cpp  check_Automata_h.cpp  check_Parser_h.cpp  check_lexer_h.cpp  check_rd_file.cpp
tests/source_codes/: 1.bzg
tools/: generate_reduce_functions.cpp
(+5 files in other folders)
